Add search for videos.
